--- a/certificate.html
+++ b/certificate.html
@@ -114,7 +114,7 @@
                         CHỨNG NHẬN
                     </h2>
                     <h3 class="text-2xl font-semibold text-blue-700">
-                        HOÀN THÀNH XUẤT SẮC NHIỆM VỤ
+                        HOÀN THÀNH XUẤT SẮC NHIỆM VỤ TRONG THÁNG <span id="displayMonth" class="font-bold text-blue-800"></span>,
                     </h3>
                 </div>
 
@@ -275,4 +275,5 @@
         }
     </script>
 </body>
+
 </html>
