--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 
             const now = new Date();
             document.getElementById('displayMonth').textContent = (now.getMonth() + 1) + '/' + now.getFullYear();
-            document.getElementById('displayDate').textContent = `Ngày ${now.getDate()}, tháng ${now.getMonth() + 1}, năm ${now.getFullYear()}`;
+            document.getElementById('displayDate').textContent = `Ngày ${now.getDate()} tháng ${now.getMonth() + 1} năm ${now.getFullYear()}`;
         });
     </script>
 </body>
 </html>
+
