--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="flex justify-end mt-24">
                     <div class="text-center">
                         <p id="displayDate" class="font-semibold text-gray-800 mb-2"></p>
-                        <p class="font-title font-bold text-gray-800 text-xl tracking-wider mb-16">ĐỘI TRƯỞỞNG</p>
+                        <p class="font-title font-bold text-gray-800 text-xl tracking-wider mb-16">ĐỘI TRƯỞNG</p>
                         <p class="font-title font-bold text-gray-800 text-2xl">Nguyễn Đức Nghĩa</p>
                     </div>
                 </div>
@@ -113,4 +113,5 @@
     </script>
 </body>
 </html>
+
 
