--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             
             <div class="relative z-10">
                 <div class="text-center mb-8">
-                    <h1 class="font-title text-3xl font-bold text-gray-800 tracking-wider">CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</h1>
-                    <p class="text-xl font-bold text-gray-700 tracking-[0.2em]">Độc lập - Tự do - Hạnh phúc</p>
+                    <h1 class="font-title text-3xl font-bold text-gray-800 tracking-wider">PHÒNG KỸ THUẬT HÌNH SỰ</h1>
+                    <p class="text-xl font-bold text-gray-700 tracking-[0.2em]">ĐỘI KHÁM NGHIỆM HIỆN TRƯỜNG</p>
                     <div class="w-48 h-0.5 bg-yellow-600 mx-auto mt-4"></div>
                 </div>
 
                 <div class="text-center mb-12">
                     <h2 class="font-title text-6xl font-bold text-blue-900">CHỨNG NHẬN</h2>
-                    <h3 class="text-2xl font-semibold text-blue-800 mt-2">HOÀN THÀNH XUẤT SẮC NHIỆM VỤ</h3>
+                    <h3 class="text-2xl font-semibold text-blue-800 mt-2">HOÀN THÀNH XUẤT SẮC NHIỆM VỤ TRONG THÁNG</h3>
                 </div>
 
                 <div class="text-center text-xl leading-relaxed max-w-3xl mx-auto">
@@ -113,5 +113,6 @@
     </script>
 </body>
 </html>
+
 
 
