--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 
   <style>
-    :root{
-      --gold:#b49b63;
-    }
-    body{font-family:'Merriweather',serif}
+    :root{ --gold:#b49b63; }
+    body{ font-family:'Merriweather',serif }
 
-    /* Nền cho desktop */
+    /* Nền (ẩn bớt trên mobile) */
     .bg-pattern{
       background-color:#f5f6f8;
       background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='56' height='56' viewBox='0 0 56 56'%3E%3Cpath fill='%23c9cdd6' fill-opacity='.12' d='M28 6a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 48a2 2 0 1 1 0-4 2 2 0 0 1 0 4zM6 30a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm48 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4z'/%3E%3C/svg%3E");
@@ -28,62 +26,51 @@
 
     /* Khung chứng nhận */
     .certificate{
-      position:relative;
-      background:#fff;
+      position:relative; background:#fff; overflow:hidden; isolation:isolate;
       box-shadow:0 10px 30px rgba(0,0,0,.1);
-      overflow:hidden;
-      isolation:isolate;
     }
     .certificate::before{
-      content:"";
-      position:absolute;
-      inset:20px;
-      border:3px double var(--gold);
-      z-index:1;
-      border-radius:14px;
+      content:""; position:absolute; inset:20px; z-index:1;
+      border:3px double var(--gold); border-radius:14px;
     }
+
     /* Watermark */
     .watermark{
-      position:absolute;
-      left:50%;
-      top:50%;
-      transform:translate(-50%,-50%);
-      opacity:.06;
-      z-index:0;
-      pointer-events:none;
+      position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+      opacity:.06; z-index:0; pointer-events:none;
     }
 
-    /* Danh sách tên */
-    #recipientsList {
-      text-align: center;
-      line-height: 1.7;
+    /* ===== DANH SÁCH TÊN: ép 1 cột, căn giữa, theo thứ tự Sheet ===== */
+    #recipientsList{
+      /* vô hiệu mọi multi-column cũ */
+      columns: 1 !important; -webkit-columns:1 !important; -moz-columns:1 !important;
+      /* dùng flex cho chắc chắn 1 cột */
+      display:flex !important; flex-direction:column !important; align-items:center !important;
+      text-align:center; line-height:1.7;
+      gap:.25rem;
     }
-    #recipientsList p {
-      margin-bottom: .25rem;
-    }
+    #recipientsList p{ margin:0; }
 
     /* Mobile tối ưu */
-    @media (max-width: 768px){
-      .watermark { display: none !important; }
-    }
-    @media (max-width: 480px){
-      .certificate::before { inset: 12px; border-width: 2px; border-radius: 12px; }
-      .bg-pattern { background-image: none; background-color: #f7f7f9; }
+    @media (max-width:768px){ .watermark{ display:none !important; } }
+    @media (max-width:480px){
+      .certificate::before{ inset:12px; border-width:2px; border-radius:12px; }
+      .bg-pattern{ background-image:none; background-color:#f7f7f9; }
     }
 
     /* In A4 */
-    @page{size: A4 landscape; margin: 16mm}
+    @page{ size:A4 landscape; margin:16mm }
     @media print{
-      .bg-pattern{background:none}
-      .toolbar{display:none !important}
-      body{background:white}
-      .shadow-print{box-shadow:none}
+      .bg-pattern{ background:none }
+      .toolbar{ display:none !important }
+      body{ background:#fff }
+      .shadow-print{ box-shadow:none }
     }
   </style>
 </head>
 <body class="h-full bg-pattern">
 
-  <!-- Toolbar -->
+  <!-- Toolbar (ẩn khi in) -->
   <div class="toolbar max-w-6xl mx-auto px-3 sm:px-4 pt-4 sm:pt-6 flex items-center justify-end gap-2">
     <button id="printBtn" class="px-4 py-3 rounded-xl border border-gray-300 bg-white hover:bg-gray-50 text-sm font-medium shadow-sm w-full sm:w-auto">In</button>
     <button id="refreshBtn" class="px-4 py-3 rounded-xl border border-gray-300 bg-white hover:bg-gray-50 text-sm font-medium shadow-sm w-full sm:w-auto">Tải lại</button>
@@ -102,18 +89,23 @@
       </svg>
 
       <div class="relative z-10">
-
         <!-- Header -->
         <header class="text-center">
-          <h1 class="font-title text-xl sm:text-2xl md:text-3xl font-bold text-gray-800 tracking-wide">PHÒNG KỸ THUẬT HÌNH SỰ</h1>
-          <p class="text-sm sm:text-base md:text-lg font-semibold text-gray-700 tracking-[0.18em] mt-1">ĐỘI KHÁM NGHIỆM HIỆN TRƯỜNG</p>
+          <h1 class="font-title text-xl sm:text-2xl md:text-3xl font-bold text-gray-800 tracking-wide">
+            PHÒNG KỸ THUẬT HÌNH SỰ
+          </h1>
+          <p class="text-sm sm:text-base md:text-lg font-semibold text-gray-700 tracking-[0.18em] mt-1">
+            ĐỘI KHÁM NGHIỆM HIỆN TRƯỜNG
+          </p>
           <div class="w-40 md:w-48 h-0.5 bg-[color:var(--gold)] mx-auto mt-4"></div>
         </header>
 
         <!-- Title -->
         <div class="text-center mt-8 md:mt-10">
           <h2 class="font-title font-extrabold text-[clamp(28px,8vw,56px)] text-blue-900">CHỨNG NHẬN</h2>
-          <h3 class="text-[clamp(14px,4.4vw,24px)] font-semibold text-blue-800 mt-2">HOÀN THÀNH XUẤT SẮC NHIỆM VỤ TRONG THÁNG</h3>
+          <h3 class="text-[clamp(14px,4.4vw,24px)] font-semibold text-blue-800 mt-2">
+            HOÀN THÀNH XUẤT SẮC NHIỆM VỤ TRONG THÁNG
+          </h3>
         </div>
 
         <!-- Body -->
@@ -121,18 +113,26 @@
           <p class="mb-4">Trân trọng trao tặng các đồng chí:</p>
 
           <div id="recipientsWrap" class="my-8">
-            <div id="skeleton" class="grid grid-cols-1 sm:grid-cols-2 gap-2 sm:gap-3" aria-live="polite">
+            <!-- Skeleton -->
+            <div id="skeleton" class="grid grid-cols-1 gap-2 sm:gap-3" aria-live="polite">
               <div class="h-7 sm:h-8 rounded bg-gray-200 animate-pulse"></div>
               <div class="h-7 sm:h-8 rounded bg-gray-200 animate-pulse"></div>
               <div class="h-7 sm:h-8 rounded bg-gray-200 animate-pulse"></div>
               <div class="h-7 sm:h-8 rounded bg-gray-200 animate-pulse"></div>
             </div>
-            <div id="recipientsList" class="font-title font-bold text-[clamp(20px,5.2vw,36px)] text-blue-900 columns-1 lg:columns-2 gap-6 break-inside-avoid"></div>
+
+            <!-- Danh sách tên: 1 cột căn giữa -->
+            <div id="recipientsList"
+                 class="font-title font-bold text-[clamp(20px,5.2vw,36px)] text-blue-900"></div>
+
             <p id="emptyText" class="hidden text-base text-gray-600">Không có đồng chí nào trong danh sách.</p>
             <p id="errorText" class="hidden text-base text-red-600">Không thể tải được danh sách. Vui lòng thử lại.</p>
           </div>
 
-          <p>Đã có thành tích đặc biệt xuất sắc trong công tác, góp phần vào sự thành công chung của đơn vị trong tháng <b id="displayMonth" class="text-blue-900"></b>.</p>
+          <p>
+            Đã có thành tích đặc biệt xuất sắc trong công tác, góp phần vào sự thành công chung của đơn vị trong tháng
+            <b id="displayMonth" class="text-blue-900"></b>.
+          </p>
         </section>
 
         <!-- Footer -->
@@ -143,14 +143,15 @@
             <p class="font-title font-bold text-gray-800 text-lg sm:text-2xl">Nguyễn Đức Nghĩa</p>
           </div>
         </footer>
-
       </div>
     </section>
   </main>
 
   <script>
     (function(){
+      // THAY BẰNG URL WEB APP CỦA BẠN NẾU CẦN
       const API_URL = 'https://script.google.com/macros/s/AKfycbx41P3z79Y-1FzYsek-Tls9zffdIOfy5w4x36im4-51uFNnJyTZ5Jb-uYjah2nQ9sG7/exec';
+
       const el = {
         list: document.getElementById('recipientsList'),
         skeleton: document.getElementById('skeleton'),
@@ -162,16 +163,19 @@
         refreshBtn: document.getElementById('refreshBtn'),
       };
 
+      // Ngày tháng hiển thị
       const now = new Date();
       el.month.textContent = (now.getMonth()+1) + '/' + now.getFullYear();
       el.date.textContent = `Ngày ${now.getDate()} tháng ${now.getMonth()+1} năm ${now.getFullYear()}`;
 
+      // Render giữ nguyên thứ tự như Sheet (không sort lại)
       function renderNames(names){
         el.list.innerHTML = '';
         const frag = document.createDocumentFragment();
         names.forEach((n)=>{
+          if(!n) return;
           const p = document.createElement('p');
-          p.textContent = n;
+          p.textContent = n;              // dùng textContent để tránh XSS
           frag.appendChild(p);
         });
         el.list.appendChild(frag);
@@ -185,28 +189,37 @@
         if(section==='error') el.error.classList.remove('hidden');
       }
 
-      async function fetchNames(){
+      async function fetchNames(retry=1){
         el.skeleton.classList.remove('hidden');
         show('');
         try{
-          const res = await fetch(API_URL);
+          const ctrl = new AbortController();
+          const timer = setTimeout(()=>ctrl.abort(), 8000); // timeout 8s
+          const res = await fetch(API_URL, { signal: ctrl.signal, cache: 'no-store' });
+          clearTimeout(timer);
           if(!res.ok) throw new Error('HTTP '+res.status);
           const data = await res.json();
-          const names = Array.isArray(data) ? data.filter(Boolean) : [];
+          const names = Array.isArray(data) ? data : [];
           if(names.length){ renderNames(names); show(''); }
           else{ show('empty'); }
         }catch(err){
-          show('error');
-          console.error('Lỗi khi tải dữ liệu:', err);
+          if(retry>0){
+            // backoff nhẹ
+            setTimeout(()=>fetchNames(retry-1), 600);
+          }else{
+            show('error');
+            console.error('Lỗi khi tải dữ liệu:', err);
+          }
         }finally{
           el.skeleton.classList.add('hidden');
         }
       }
 
       el.printBtn?.addEventListener('click', ()=> window.print());
-      el.refreshBtn?.addEventListener('click', ()=> fetchNames());
+      el.refreshBtn?.addEventListener('click', ()=> fetchNames(1));
 
-      fetchNames();
+      // Khởi động
+      fetchNames(1);
     })();
   </script>
 </body>
