--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
           <p>
             Đã có thành tích đặc biệt xuất sắc trong công tác, góp phần vào sự thành công chung của đơn vị trong tháng
-            <b class="text-blue-900"> 8 năm 2025</b>
+            <b id="displayMonth" class="text-blue-900"></b>
           </p>
         </section>
 
@@ -224,4 +224,5 @@
   </script>
 </body>
 </html>
+
 
