--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
           <div class="text-center">
             <p id="displayDate" class="font-semibold text-gray-800 mb-2 text-sm sm:text-base"></p>
             <p class="font-title font-bold text-gray-800 text-base sm:text-xl tracking-wider mb-12 sm:mb-16">ĐỘI TRƯỞNG</p>
+        <!-- Ảnh chữ ký -->
+            <img src="chuky.png" alt="Chữ ký đội trưởng" 
+                 class="mx-auto w-40 sm:w-48 h-auto mb-4 opacity-90 rotate-[-2deg]">
+
             <p class="font-title font-bold text-gray-800 text-lg sm:text-2xl">Nguyễn Đức Nghĩa</p>
           </div>
         </footer>
@@ -207,4 +211,5 @@
   </script>
 </body>
 </html>
+
 
