--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <footer class="flex justify-end mt-12 sm:mt-16 md:mt-24">
           <div class="text-center">
             <p id="displayDate" class="font-semibold text-gray-800 mb-2 text-sm sm:text-base"></p>
-            <p class="font-title font-bold text-gray-800 text-base sm:text-xl tracking-wider mb-12 sm:mb-16">ĐỘI TRƯỞNG</p>
+            <p class="font-title font-bold text-gray-800 text-base sm:text-xl tracking-wider mb-2">ĐỘI TRƯỞNG</p>
         <!-- Ảnh chữ ký -->
             <img src="chuky.png" alt="Chữ ký đội trưởng" 
                  class="mx-auto w-40 sm:w-48 h-auto mb-4 opacity-90 rotate-[-2deg]">
@@ -211,5 +211,6 @@
   </script>
 </body>
 </html>
+
 
 
