--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <p class="font-title font-bold text-gray-800 text-base sm:text-xl tracking-wider mb-1">ĐỘI TRƯỞNG</p>
         <!-- Ảnh chữ ký -->
             <img src="chuky.png" alt="Chữ ký đội trưởng" 
-                 class="mx-auto w-40 sm:w-48 h-auto mb-2 opacity-90 rotate-[-2deg]">
+                 class="mx-auto w-40 sm:w-48 h-auto mb-1 -mt-1 opacity-90 rotate-[-2deg]">
 
             <p class="font-title font-bold text-gray-800 text-lg sm:text-2xl">Nguyễn Đức Nghĩa</p>
           </div>
@@ -211,6 +211,7 @@
   </script>
 </body>
 </html>
+
 
 
 
